# playdate4j

./: .gitignore  README.md  build.bat  pd4j_bridge_compile.bat
pd4j_app/: CMakeLists.txt
pd4j_app/Source/: pdxinfo
pd4j_app/src/: main.c
pd4j_bridge/: CMakeLists.txt  CMakeSettings.json  com_am1goo_playdate4j_sdk_ApiBridge.cpp  com_am1goo_playdate4j_sdk_ApiBridge.h  com_am1goo_playdate4j_sdk_DebugBridge.cpp  com_am1goo_playdate4j_sdk_DebugBridge.h  com_am1goo_playdate4j_sdk_DisplayBridge.cpp  com_am1goo_playdate4j_sdk_DisplayBridge.h  com_am1goo_playdate4j_sdk_FilesystemBridge.cpp  com_am1goo_playdate4j_sdk_FilesystemBridge.h  com_am1goo_playdate4j_sdk_GraphicsBridge.cpp  com_am1goo_playdate4j_sdk_GraphicsBridge.h  com_am1goo_playdate4j_sdk_InputBridge.cpp  com_am1goo_playdate4j_sdk_InputBridge.h  com_am1goo_playdate4j_sdk_SoundBridge.cpp  com_am1goo_playdate4j_sdk_SoundBridge.h  com_am1goo_playdate4j_sdk_SoundBridge_AudioSampleBridge.cpp  com_am1goo_playdate4j_sdk_SoundBridge_AudioSampleBridge.h  com_am1goo_playdate4j_sdk_SoundBridge_BitCrusherBridge.cpp  com_am1goo_playdate4j_sdk_SoundBridge_BitCrusherBridge.h  com_am1goo_playdate4j_sdk_SoundBridge_ChannelBridge.cpp  com_am1goo_playdate4j_sdk_SoundBridge_ChannelBridge.h  com_am1goo_playdate4j_sdk_SoundBridge_ControlSignalBridge.cpp  com_am1goo_playdate4j_sdk_SoundBridge_ControlSignalBridge.h  com_am1goo_playdate4j_sdk_SoundBridge_DelayLineBridge.cpp  com_am1goo_playdate4j_sdk_SoundBridge_DelayLineBridge.h  com_am1goo_playdate4j_sdk_SoundBridge_DelayLineTapBridge.cpp  com_am1goo_playdate4j_sdk_SoundBridge_DelayLineTapBridge.h  com_am1goo_playdate4j_sdk_SoundBridge_FilePlayerBridge.cpp  com_am1goo_playdate4j_sdk_SoundBridge_FilePlayerBridge.h  com_am1goo_playdate4j_sdk_SoundBridge_OnePoleFilterBridge.cpp  com_am1goo_playdate4j_sdk_SoundBridge_OnePoleFilterBridge.h  com_am1goo_playdate4j_sdk_SoundBridge_OverdriveBridge.cpp  com_am1goo_playdate4j_sdk_SoundBridge_OverdriveBridge.h  com_am1goo_playdate4j_sdk_SoundBridge_PDSynthBridge.cpp  com_am1goo_playdate4j_sdk_SoundBridge_PDSynthBridge.h  com_am1goo_playdate4j_sdk_SoundBridge_PDSynthEnvelopeBridge.cpp  com_am1goo_playdate4j_sdk_SoundBridge_PDSynthEnvelopeBridge.h  com_am1goo_playdate4j_sdk_SoundBridge_PDSynthInstrumentBridge.cpp  com_am1goo_playdate4j_sdk_SoundBridge_PDSynthInstrumentBridge.h  (+29 more)
pd4j_bridge/include/: pd4j_bridge.h
pd4j_buildtools/: arch.cmake  jdk.cmake  playdate.cmake
pd4j_engine/src/main/java/com/am1goo/playdate4j/: Core.java  Main.java
pd4j_engine/src/main/java/com/am1goo/playdate4j/engine/: JGameEngine.java
pd4j_engine/src/main/java/com/am1goo/playdate4j/engine/localization/: Localization.java
pd4j_engine/src/main/java/com/am1goo/playdate4j/engine/objects/: IObject.java  IObjectFactory.java  JObjectsManager.java
pd4j_engine/src/main/java/com/am1goo/playdate4j/engine/objects/impl/: JSprite.java  JSpriteFactory.java
pd4j_engine/src/main/java/com/am1goo/playdate4j/engine/primitives/: Vector2f.java
pd4j_engine/src/main/java/com/am1goo/playdate4j/engine/render/: JRenderManager.java
pd4j_engine/src/main/java/com/am1goo/playdate4j/engine/serialization/: JDataInputStream.java  JDataOutputStream.java
pd4j_engine/src/main/java/com/am1goo/playdate4j/engine/settings/: Settings.java  SettingsFile.java
pd4j_engine/src/main/java/com/am1goo/playdate4j/engine/settings/impl/: BaseSettingsFile.java  JSettingsFile.java
pd4j_engine/src/main/java/com/am1goo/playdate4j/engine/ui/: UI.java
pd4j_engine/src/main/java/com/am1goo/playdate4j/engine/ui/controls/: Control.java  Rect.java
pd4j_engine/src/main/java/com/am1goo/playdate4j/engine/ui/controls/impl/: Button.java  LocalizedButton.java
pd4j_engine/src/main/java/com/am1goo/playdate4j/engine/utilities/: Easing.java  Easings.java  Mathx.java
pd4j_engine/src/main/java/com/am1goo/playdate4j/example/: ExampleGameCycle.java
pd4j_engine/src/main/java/com/am1goo/playdate4j/example/game/: Ship.java  Unit.java  World.java
pd4j_engine/src/main/java/com/am1goo/playdate4j/example/game/coords/: Position.java
pd4j_engine/src/main/java/com/am1goo/playdate4j/game/: IGameCycle.java
pd4j_engine/src/main/java/com/am1goo/playdate4j/sdk/: Api.java  ApiBridge.java  Debug.java  DebugBridge.java  Display.java  DisplayBridge.java  Event.java  Filesystem.java  FilesystemBridge.java  Game.java  GameCycle.java  GameEngine.java  GameOutputStream.java  Graphics.java  GraphicsBridge.java  Input.java  InputBridge.java  Sdk.java  Settings.java  Sound.java  SoundBridge.java  Sprite.java  SpriteBridge.java  Sys.java  SysBridge.java  Video.java  VideoBridge.java
pd4j_host/: CMakeLists.txt  pd4j_consts.h  pd4j_exec.cpp  pd4j_host.cpp  pd4j_host.h
